change project type

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,10 @@
 {
   "name": "tecnickcom/tc-font-mirror",
-  "description": "Fonts",
-  "type": "fonts",
+  "description": "This project contains a copy of the following OpenSource fonts:",
+  "type": "library",
   "keywords": [
     "fonts",
     "tc-lib-pdf",
     "font"
-  ],
-  "require": {},
-  "require-dev": {}
+  ]
 }
